# Penumbra

./: .gitignore  CMakeLists.txt  README.md  credits.txt  imgui.ini
assets/models/: bowl.glb  bunny.glb  cableholder.mtl  cables.mtl  corridor.mtl  cube.glb  debris.mtl  grate.mtl  light.mtl  pantstand.glb  plane.glb  sphere.glb  subdivplane.glb
assets/prefabs/: Box Collider.prefab  BoxCollider.prefab  Box_Collider.prefab  Bricks.prefab  Ceiling.prefab  CornellBoxWall.prefab  Door.prefab  FloorCollider.prefab  New_GameObject.prefab  Point_Light.prefab  RedWall.prefab  Sphere.prefab  Wall.prefab  WallCollider.prefab  WallLamp.prefab  Wood_Floor.prefab
assets/scenes/: cornellbox.scene  default.scene  outside.scene  tunnel.scene
dependencies/glad/: glad.h  glad.h:Zone.Identifier
dependencies/glm/ext/: quaternion_trigonometric.hpp:Zone.Identifier
dependencies/imgui/: imstb_rectpack.h:Zone.Identifier
models/: Tex_1.jpg:Zone.Identifier
shaders/: diffuseFragment.glsl  fragment.glsl  geometryFrag.glsl  geometryVert.glsl  lightingFrag.glsl  lightingVert.glsl  shadowFrag.glsl  shadowVert.glsl  vertex.glsl
shaders/clouds/: cloudComposite.glsl  cloudFrag.glsl
shaders/common/: clouds.glsl  fog.glsl  lights.glsl  reflectionProbes.glsl
shaders/compute/cloud/: lightingVoxelCompute.glsl  texturePopulateCompute.glsl  textureSliceView.glsl
shaders/compute/particles/: particleCompute.glsl
shaders/compute/water/: mossDensityCompute.glsl  waterNormalCompute.glsl  waterRippleCompute.glsl  waterSimulateCompute.glsl
shaders/debug/: debugChannelFrag.glsl
shaders/fog/: fogCompositeFrag.glsl  fogFrag.glsl
shaders/fxaa/: fxaaFrag.glsl
shaders/geometry/: geometryFrag.glsl  geometryVert.glsl
shaders/lighting/: lightingFrag.glsl  lightingVert.glsl  probeBakeFrag.glsl  probeBakeVert.glsl
shaders/particles/: particleLitFrag.glsl  particleUnlitFrag.glsl  particleVert.glsl
shaders/passthrough/: passthroughFrag.glsl
shaders/shadows/: pointShadowFrag.glsl  pointShadowGeom.glsl  pointShadowVert.glsl  shadowVert.glsl
shaders/skybox/: skyboxFrag.glsl  skyboxVert.glsl
shaders/ssao/: ssaoBlurFrag.glsl  ssaoFrag.glsl
shaders/ssr/: ssrCompositeFrag.glsl  ssrFrag.glsl  ssrVert.glsl
shaders/water/: waterFrag.glsl  waterVert.glsl
src/: camera.h  component.h  config.h  gameobject.h  gbuffer.h  glad.c  light.h  main.cpp  material.h  mesh.cpp  mesh.h  profiler.h  quad.h  renderer.cpp  renderer.h  scene.h  settings.cpp  shaderutils.cpp  shaderutils.h  transform.h
src/components/: fogVolumeComponent.h  lightComponent.h  meshComponent.h  particleSystemComponent.h  rigidbodyComponent.h
src/particles/: particle.h  particleSystem.h  particleSystemManager.h
src/physics/: physicsSystem.h  rigidbody.h  rigidbodyComponent.h
src/physics/camera/: camera.h  characterControllerComponent.cpp  characterControllerComponent.h
src/rendering/: camera.h  colliderDebugRenderer.cpp  gbuffer.h  light.h  material.h  mesh.cpp  mesh.h  meshComponent.h  quad.h  renderTargets.h  renderer.cpp  renderer.h  shaderLibrary.h  shaderutils.cpp  shaderutils.h  skybox.h  stb_image.cpp
src/rendering/debug/: colliderDebugRenderer.cpp  colliderDebugRenderer.h
src/rendering/effects/clouds/: cloudViewer.h  cloudVolume.h  cloudVolumeComponent.h  worleyNoise.cpp  worleyNoise.h
src/rendering/effects/cubemaps/: skybox.h
src/rendering/effects/fog/: fogVolume.h  fogVolumeComponent.h
src/rendering/effects/globalIllumination/: ProbeGrid.h
src/rendering/effects/lights/: light.h  lightComponent.h
src/rendering/effects/particles/: particle.h  particleSystem.h  particleSystemComponent.h
src/rendering/effects/reflections/: reflectionProbe.h  reflectionProbeComponent.h
src/rendering/effects/water/: interactiveWater.cpp  interactiveWater.h  interactiveWaterComponent.h
src/rendering/globalIllumination/: ProbeGrid.h
src/rendering/mesh/: material.h  mesh.cpp  meshComponent.h  model.cpp  model.h
src/rendering/pathTracing/: pathTracer.cpp  pathTracer.h
src/scripting/core/: ScriptComponent.h
src/utils/: profiler.h  sceneLoader.cpp  sceneLoader.h  shaderutils.cpp
src/utils/GUI/: gui.h
